--- a/quote.html
+++ b/quote.html
@@ -66,7 +66,7 @@
             <div class="row">
                <div class="col-md-12">
                   <div class="titlepage">
-                     <h2>Contact Us</h2>
+                     <h2>Get a Quote</h2>
                   </div>
                </div>
             </div>
